// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SummaryComponent should match snapshot for TP5 1`] = `
<div
  id="root0"
>
  <div>
    <netz-page-heading>
      <span
        class="govuk-caption-l"
      >
        TP5 (2021-2022)
      </span>
      
      <h1
        class="govuk-heading-l"
      >
        Summary
      </h1>
    </netz-page-heading>
    
    <cca-highlight-diff>
      <div
        class="govuk-!-display-none"
      >
        <cca-summary>
          
          <dl
            class="govuk-summary-list govuk-!-margin-bottom-9"
            govuk-summary-list=""
          >
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Are you providing baseline and target information for TP5 (2021 to 2022)?
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  No
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            
            
            
          </dl>
          
          
        </cca-summary>
        
      </div>
      <div
        class="govuk-!-display-none"
      >
        <cca-summary>
          
          <dl
            class="govuk-summary-list govuk-!-margin-bottom-9"
            govuk-summary-list=""
          >
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Are you providing baseline and target information for TP5 (2021 to 2022)?
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  No
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            
            
            
          </dl>
          
          
        </cca-summary>
        
      </div>
      <div
        class="highlight"
      >
        <dl
          class="govuk-summary-list govuk-!-margin-bottom-9"
        >
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Are you providing baseline and target information for TP5 (2021 to 2022)?
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                No
              </span>
            </dd>
          </div>
        </dl>
      </div>
    </cca-highlight-diff>
  </div>
  <hr
    class="govuk-footer__section-break govuk-!-margin-bottom-3"
  />
  <netz-return-to-task-or-action-page>
    <a
      class="govuk-link"
      href="/undefined"
    >
       Return to: Apply to vary the underlying agreement 
    </a>
  </netz-return-to-task-or-action-page>
</div>
`;

exports[`SummaryComponent should match snapshot for TP6 - RELATIVE agreementMeasurementType 1`] = `
<div
  id="root1"
>
  <div>
    <netz-page-heading>
      <span
        class="govuk-caption-l"
      >
        TP6 (2024)
      </span>
      
      <h1
        class="govuk-heading-l"
      >
        Summary
      </h1>
    </netz-page-heading>
    
    <cca-highlight-diff>
      <div
        class="govuk-!-display-none"
      >
        <cca-summary>
          <h2
            class="govuk-heading-m"
          >
            Target composition
          </h2>
          
          <dl
            class="govuk-summary-list govuk-!-margin-bottom-9"
            govuk-summary-list=""
          >
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Target calculator file
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                <cca-summary-download-files>
                  <a
                    class="govuk-link"
                    href="/tasks/null/file-download/1b2ae8fe-4322-4b8c-9b2c-03d77b5a8fbb"
                    target="_blank"
                  >
                    target_calculator_tp6.xlsx
                  </a>
                  
                  
                </cca-summary-download-files>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Energy or carbon units used by the sector
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Energy (kWh)
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Energy or carbon units used by the target unit
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Energy (kWh)
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Target type for agreement composition
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Relative
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Target unit throughput has a unit of
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  GJ
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            
            
            
          </dl>
          
          <h2
            class="govuk-heading-m"
          >
            Details of baseline data
          </h2>
          
          <dl
            class="govuk-summary-list govuk-!-margin-bottom-9"
            govuk-summary-list=""
          >
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Is at least 12 months of consecutive baseline data available?
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  No
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Enter the date that 12 months of data will be available.
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  12 Dec 2020
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Explain how the target unit fits the greenfield criteria
              </dt>
              <dd
                class="pre-line govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  test
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Evidence
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                <cca-summary-download-files>
                  <a
                    class="govuk-link"
                    href="/tasks/null/file-download/f8dff40f-3fb7-4368-8723-244661fb686f"
                    target="_blank"
                  >
                    greenfield_evidence_tp6.pdf
                  </a>
                  
                  
                </cca-summary-download-files>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Baseline kWh for the target facility
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  100
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Must the Special Reporting Methodology be applied for this facility?
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Yes
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Baseline throughput (GJ)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  10
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Performance (kWh/GJ)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  10
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Baseline energy to carbon factor (kgC/kWh)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  1
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            
            
            
          </dl>
          
          <h2
            class="govuk-heading-m"
          >
            Targets
          </h2>
          
          <dl
            class="govuk-summary-list govuk-!-margin-bottom-9"
            govuk-summary-list=""
          >
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Improvement (%)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  0.1
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Target (kWh/GJ)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  9
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            
            
            
          </dl>
          
          
        </cca-summary>
        
      </div>
      <div
        class="govuk-!-display-none"
      >
        <cca-summary>
          <h2
            class="govuk-heading-m"
          >
            Target composition
          </h2>
          
          <dl
            class="govuk-summary-list govuk-!-margin-bottom-9"
            govuk-summary-list=""
          >
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Target calculator file
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                <cca-summary-download-files>
                  <a
                    class="govuk-link"
                    href="/tasks/null/file-download/7d9e456f-2211-4abc-8d5e-12a34b567c89"
                    target="_blank"
                  >
                    target_calculator_original.xlsx
                  </a>
                  
                  
                </cca-summary-download-files>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Energy or carbon units used by the sector
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Energy (kWh)
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Energy or carbon units used by the target unit
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Energy (kWh)
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Target type for agreement composition
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Relative
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Target unit throughput has a unit of
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  MWh
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            
            
            
          </dl>
          
          <h2
            class="govuk-heading-m"
          >
            Details of baseline data
          </h2>
          
          <dl
            class="govuk-summary-list govuk-!-margin-bottom-9"
            govuk-summary-list=""
          >
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Is at least 12 months of consecutive baseline data available?
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Yes
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Start date of baseline
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  30 Jun 2023
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Explain why you are using a different baseline year
              </dt>
              <dd
                class="pre-line govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Updated baseline due to facility upgrades and new equipment installation
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Baseline kWh for the target facility
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  250,000
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Must the Special Reporting Methodology be applied for this facility?
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  Yes
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Baseline throughput (MWh)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  75,000
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Performance (kWh/MWh)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  3.33
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Baseline energy to carbon factor (kgC/kWh)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  0.233
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            
            
            
          </dl>
          
          <h2
            class="govuk-heading-m"
          >
            Targets
          </h2>
          
          <dl
            class="govuk-summary-list govuk-!-margin-bottom-9"
            govuk-summary-list=""
          >
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Improvement (%)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  0.15
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            <div
              class="govuk-summary-list__row"
              govuksummarylistrow=""
            >
              <dt
                class="govuk-summary-list__key"
                govuksummarylistrowkey=""
              >
                Target (kWh/MWh)
              </dt>
              <dd
                class="govuk-summary-list__value"
                govuksummarylistrowvalue=""
              >
                
                
                
                <span>
                  2.83
                </span>
                
                
                
                
              </dd>
              
              
            </div>
            
            
            
          </dl>
          
          
        </cca-summary>
        
      </div>
      <div
        class="highlight"
      >
        <h2
          class="govuk-heading-m"
        >
          Target composition
        </h2>
        <dl
          class="govuk-summary-list govuk-!-margin-bottom-9"
        >
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Target calculator file
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <a
                class="govuk-link"
                href="/tasks/null/file-download/1b2ae8fe-4322-4b8c-9b2c-03d77b5a8fbb"
                target="_blank"
              >
                <del
                  class="diffmod"
                >
                  target_calculator_original
                </del>
                <ins
                  class="diffmod"
                >
                  target_calculator_tp6
                </ins>
                .xlsx
              </a>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Energy or carbon units used by the sector
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                Energy (kWh)
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Energy or carbon units used by the target unit
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                Energy (kWh)
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Target type for agreement composition
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                Relative
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Target unit throughput has a unit of
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                <del
                  class="diffmod"
                >
                  MWh
                </del>
                <ins
                  class="diffmod"
                >
                  GJ
                </ins>
              </span>
            </dd>
          </div>
        </dl>
        <h2
          class="govuk-heading-m"
        >
          Details of baseline data
        </h2>
        <dl
          class="govuk-summary-list govuk-!-margin-bottom-9"
        >
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Is at least 12 months of consecutive baseline data available?
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                <del
                  class="diffmod"
                >
                  Yes
                </del>
                <ins
                  class="diffmod"
                >
                  No
                </ins>
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              <del
                class="diffmod"
              >
                Start
              </del>
              <ins
                class="diffmod"
              >
                Enter the
              </ins>
               date 
              <ins
                class="diffins"
              >
                that 12 months 
              </ins>
              of 
              <del
                class="diffmod"
              >
                baseline
              </del>
              <ins
                class="diffmod"
              >
                data will be available.
              </ins>
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                <del
                  class="diffmod"
                >
                  30
                </del>
                <ins
                  class="diffmod"
                >
                  12
                </ins>
                 
                <del
                  class="diffmod"
                >
                  Jun
                </del>
                <ins
                  class="diffmod"
                >
                  Dec
                </ins>
                 202
                <del
                  class="diffmod"
                >
                  3
                </del>
                <ins
                  class="diffmod"
                >
                  0
                </ins>
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Explain 
              <del
                class="diffmod"
              >
                why
              </del>
              <ins
                class="diffmod"
              >
                how
              </ins>
               
              <del
                class="diffmod"
              >
                you
              </del>
              <ins
                class="diffmod"
              >
                the
              </ins>
               
              <del
                class="diffmod"
              >
                are
              </del>
              <ins
                class="diffmod"
              >
                target
              </ins>
               
              <del
                class="diffmod"
              >
                using
              </del>
              <ins
                class="diffmod"
              >
                unit
              </ins>
               
              <del
                class="diffmod"
              >
                a
              </del>
              <ins
                class="diffmod"
              >
                fits
              </ins>
               
              <del
                class="diffmod"
              >
                different
              </del>
              <ins
                class="diffmod"
              >
                the
              </ins>
               
              <del
                class="diffmod"
              >
                baseline
              </del>
              <ins
                class="diffmod"
              >
                greenfield
              </ins>
               
              <del
                class="diffmod"
              >
                year
              </del>
              <ins
                class="diffmod"
              >
                criteria
              </ins>
            </dt>
            <dd
              class="pre-line govuk-summary-list__value"
            >
              <span>
                <del
                  class="diffmod"
                >
                  Updated baseline due to facility upgrades and new equipment installation
                </del>
                <ins
                  class="diffmod"
                >
                  test
                </ins>
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              <ins
                class="diffins"
              >
                Evidence
              </ins>
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <a
                class="govuk-link"
                href="/tasks/null/file-download/f8dff40f-3fb7-4368-8723-244661fb686f"
                target="_blank"
              >
                <ins
                  class="diffins"
                >
                  greenfield_evidence_tp6.pdf
                </ins>
              </a>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Baseline kWh for the target facility
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                <del
                  class="diffmod"
                >
                  250,0
                </del>
                <ins
                  class="diffmod"
                >
                  1
                </ins>
                00
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Must the Special Reporting Methodology be applied for this facility?
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                Yes
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Baseline throughput (
              <del
                class="diffmod"
              >
                MWh
              </del>
              <ins
                class="diffmod"
              >
                GJ
              </ins>
              )
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                <del
                  class="diffmod"
                >
                  75,00
                </del>
                <ins
                  class="diffmod"
                >
                  1
                </ins>
                0
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Performance (kWh/
              <del
                class="diffmod"
              >
                MWh
              </del>
              <ins
                class="diffmod"
              >
                GJ
              </ins>
              )
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                <del
                  class="diffmod"
                >
                  3.33
                </del>
                <ins
                  class="diffmod"
                >
                  10
                </ins>
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Baseline energy to carbon factor (kgC/kWh)
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                <del
                  class="diffmod"
                >
                  0.233
                </del>
                <ins
                  class="diffmod"
                >
                  1
                </ins>
              </span>
            </dd>
          </div>
        </dl>
        <h2
          class="govuk-heading-m"
        >
          Targets
        </h2>
        <dl
          class="govuk-summary-list govuk-!-margin-bottom-9"
        >
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Improvement (%)
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                0.1
                <del
                  class="diffdel"
                >
                  5
                </del>
              </span>
            </dd>
          </div>
          <div
            class="govuk-summary-list__row"
          >
            <dt
              class="govuk-summary-list__key"
            >
              Target (kWh/
              <del
                class="diffmod"
              >
                MWh
              </del>
              <ins
                class="diffmod"
              >
                GJ
              </ins>
              )
            </dt>
            <dd
              class="govuk-summary-list__value"
            >
              <span>
                <del
                  class="diffmod"
                >
                  2.83
                </del>
                <ins
                  class="diffmod"
                >
                  9
                </ins>
              </span>
            </dd>
          </div>
        </dl>
      </div>
    </cca-highlight-diff>
  </div>
  <hr
    class="govuk-footer__section-break govuk-!-margin-bottom-3"
  />
  <netz-return-to-task-or-action-page>
    <a
      class="govuk-link"
      href="/undefined"
    >
       Return to: Apply to vary the underlying agreement 
    </a>
  </netz-return-to-task-or-action-page>
</div>
`;
